# slp-tauri

./: .editorconfig  .env  .eslintrc.json  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: build.yml
public/: index.html
src/: app.tsx  cfg.ts  css.tsx  global.css  hooks.ts  index.html  index.tsx  tauri.d.ts  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: async_handler.rs  cmd.rs  main.rs
src/components/: Config.tsx  Dialog.tsx  Input.tsx  Select.tsx  ServerList.tsx  Tabs.tsx
src/lang/: en.ts  index.tsx  zhCN.ts
src/pages/: Proxy.tsx  Server.tsx  Settings.tsx
src/utils/: withStatic.ts
