[package]
name = "slp-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = [ "spacemeowx2" ]
license = ""
repository = ""
default-run = "slp-tauri"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.5", features = [ "all-api", "edge" ] }
tauri-async-handler = { version = "0.1", features = [ "tokio02" ] }
tokio = { version = "0.2", features = [ "full" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "slp-tauri"
path = "src/main.rs"
